--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,20 @@
+html, body{
+  font-family: "Helvetica Neue", Helvetica,sans-serif;
+  font-size: 18px;
+  line-height: 30px;
+  color: #444;
+  text-shadow: 1px 1px 0px #fff;
+}
 body{
-  color: red;
+  text-align: center;
+}
+h1{
+  font-size: 36px;
+  line-height: 50px;
+  font-weight: bold;
+}
+img{
+  border-radius: 50px;
 }
 *{
   margin: 0;
