--- a/styles.css
+++ b/styles.css
@@ -27,3 +27,10 @@ img{
   line-height: inherit;
   color: inherit;
 }
+.hero{
+  outline: 1px solid red;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
